tests/NormalTests/paczka1/fuzzy1/99167760.err
Error in line 2: 0qWLzi5x A679 94,3
Error in line 5: Fg0oiiMd A679 108,8
Error in line 15: Fg0oiiMd S877 18,2
Error in line 20: ADoUysw7 A679 263,44
Error in line 18: ADoUysw7 A679 93,4
Error in line 30: 0qWLzi5x A335 2 ,3
Error in line 28: A679 A679 29,1
Error in line 34: QJeZ5e A335 430,4
